test/sematest/valid/use_of_void.java
class A {
  public static void main(String[] args) {
    return;
  }

  public void bla(){
    return;
  }
}
