test/sematest/invalid/calling_main.java
class System {
    public static void main(String[] args) {
        main(1);
    }
}
